调整界面显示

--- a/wisdomCampus/html/check-detail.html
+++ b/wisdomCampus/html/check-detail.html
@@ -166,8 +166,8 @@
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav" style="background-color: #3C9BFE;">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+		<header class="mui-bar mui-bar-nav" style="background-color: #63BBFF;">
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
 			<h1 class="mui-title" style="color: white;">审批详情</h1>
 		</header>
 		<div class="mui-content" id="checkDetailData">
@@ -220,6 +220,7 @@
 		<script src="../js/demoCssJs/jquery-weui.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/utils/utils.js"></script>
 		<script src="../js/utils/storageutil.js"></script>
+		<script src='../js/lib/vconsole/vconsole.min.js'></script>
 		<script type="text/javascript">
 			var checkDetailData = new Vue({
 				el: "#checkDetailData",
