--- a/wisdomCampus/html/home.html
+++ b/wisdomCampus/html/home.html
@@ -145,7 +145,7 @@
 		<script type="text/javascript" src="../js/utils/utils.js"></script>
 		<script type="text/javascript" src="../js/utils/storageutil.js"></script>
 		<script type="text/javascript" src="../js/vue.js"></script>
-
+		<script src='../js/lib/vconsole/vconsole.min.js'></script>
 		<script src="../js/home.js"></script>
 		<script>
 			mui('.mui-scroll-wrapper').scroll({
