--- a/wisdomCampus/html/all.html
+++ b/wisdomCampus/html/all.html
@@ -163,6 +163,7 @@
 		<script src="../js/utils/storageutil.js"></script>
 		<script src="../js/utils/utils.js"></script>
 		<script src="../js/publicProtocol.js"></script>
+		<script src='../js/lib/vconsole/vconsole.min.js'></script>
 		<script>
 			var current_key = {
 				title: 'notice',
