更改导航栏颜色

--- a/wisdomCampus/html/all.html
+++ b/wisdomCampus/html/all.html
@@ -98,9 +98,9 @@
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">通知公告</h1>
+        <header class="mui-bar mui-bar-nav" style="background-color:#63BBFF;">
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
+			<h1 class="mui-title" style="color: white;">通知公告</h1>
 		</header>
 		<nav class="mui-bar mui-bar-tab">
 
