--- a/wisdomCampus/html/home.html
+++ b/wisdomCampus/html/home.html
@@ -102,7 +102,7 @@
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav common-background-bar">
+        <header class="mui-bar mui-bar-nav" style="background-color:#63BBFF">
 			<a href="javascript:mine.isMineShow=true;" class="mui-icon  mui-pull-left mui-icon-chatbubble"></a>
 			<h1 class="mui-title common-color-white common-font-family-Bold">首页</h1>
 		</header>
