修改退出时参数

--- a/wisdomCampus/html/home.html
+++ b/wisdomCampus/html/home.html
@@ -187,6 +187,7 @@
 				},
 				methods: {
 					quitLogin: function() { //退出登录
+						window.myStorage.setItem(window.storageKeyName.PERSONALINFO, '');
 						this.isMineShow = false;
 						history.go(-1);
 					},
