修改发送人名称

--- a/wisdomCampus/html/all.html
+++ b/wisdomCampus/html/all.html
@@ -228,13 +228,13 @@
 					li.className = 'mui-table-view-cell';
 					if(index == 0) {
 						li.id = model.NoticeId
-						model.SendManName=model.SendManName==undefined?"孔":model.SendManName
+						model.SendManName=model.SendManName==undefined?"":model.SendManName + "|"
 						li.innerHTML = '<div>' +
 							'<p class="mui-ellipsis" style="white-space: pre;font-size:14px;color:#333333;width: 90%;"><span style="color: #FF0000;">[' +
 							model.NoticeStatus + ']</span>' + model.NoticeTitle +
 							'</p>' +
 							'<p class="mui-ellipsis mui-pull-right" style="margin-top: 5px;font-size:12px;color:#999999">' +
-							model.SendManName + "|" + model.SendTime +
+							model.SendManName + model.SendTime +
 							'</p>' +
 							'</div>'
 					} else if(index == 1) {
@@ -242,11 +242,11 @@
 						var Progress = "";
 						if(ul.id == "apply_send") {
 							li.id= model.ApplyId
-							myName =model. ApplyManName
+							myName =""
 							Progress = model.ApplyProgress
 						} else {
 							li.id = myId = model.ApproveId
-							myName ="孔"
+							myName =model. ApplyManName+ "|"
 							Progress = model.ApproveProgress
 						}
 
@@ -255,7 +255,7 @@
 							Progress + ']</span>' + model.ApplyTitle +
 							'</p>' +
 							'<p class="mui-ellipsis mui-pull-right" style="margin-top: 5px;font-size:12px;color:#999999">' +
-							myName + "|" + model.CreateTime +
+							myName  + model.CreateTime +
 							'</p>' +
 							'</div>'
 					}
