--- a/wisdomCampus/html/home.html
+++ b/wisdomCampus/html/home.html
@@ -97,12 +97,14 @@
 				margin-left: 5%;
 				width: 90%;
 			}
+			
+
 		</style>
 
 	</head>
 
 	<body>
-        <header class="mui-bar mui-bar-nav" style="background-color:#63BBFF">
+		<header class="mui-bar mui-bar-nav" style="background-color:#63BBFF">
 			<a href="javascript:mine.isMineShow=true;" class="mui-icon  mui-pull-left mui-icon-chatbubble"></a>
 			<h1 class="mui-title common-color-white common-font-family-Bold">首页</h1>
 		</header>
@@ -113,7 +115,7 @@
 					<div id="slider" class="mui-slider">
 						<div class="mui-slider-group mui-slider-loop">
 						</div>
-						<div class="mui-slider-indicator">
+						<div class="mui-slider-indicator" style="bottom: 3px;">
 						</div>
 					</div>
 					<!--圆形按钮-->
@@ -165,9 +167,9 @@
 			getHomeCircle('circler');
 			mui(".mui-table-view").on('tap', 'a', function() {
 				var id = this.parentElement.id
-				if(id==1||id==2){
+				if(id == 1 || id == 2) {
 					utils.hrefSessionStorage("all.html", id);
-				}else{
+				} else {
 					mui.toast("此功能暂未开放");
 				}
 			})
@@ -200,4 +202,5 @@
 			})
 		</script>
 	</body>
+
 </html>
