--- a/wisdomCampus/html/login.html
+++ b/wisdomCampus/html/login.html
@@ -106,6 +106,12 @@
 								$.hideLoading();
 								if(data1.RspCode == 0) {
 									window.myStorage.setItem(window.storageKeyName.PERSONALINFO, data1.RspData);
+									//将个人信息存入原生app
+									if(utils.getSystem() == 'Android') {
+										
+									}else{
+										window.webkit.messageHandlers.setInfo.postMessage(data1.RspData);
+									}
 									utils.hrefSessionStorage('home.html', {});
 								} else {
 									mui.toast(data1.RspTxt);
@@ -125,7 +131,6 @@
 		});
 
 		//从ios原生得到信息
-		//从ios原生得到信息
 		var setUUID = function(tempStr) {
 			var tempModel0 = $.parseJSON(tempStr);
 			tempModel.uuid = tempModel0.id;
@@ -133,7 +138,7 @@
 			console.log('tempStr:' + tempStr);
 			//判断上次是否登录过，自动登录
 			var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
-			if(personal && personal.utid != 0) { //有账号，正常登录
+			if(personal && personal.utid > 0) { //有账号，正常登录
 				//需要参数
 				var comData = {
 					uuid: tempModel0.id,
@@ -158,6 +163,18 @@
 				});
 			}
 		}
+		
+		//从ios原生得到信息
+		var setPersonInfo = function(tempStr) {
+			if (tempStr.length>0) {
+				var tempModel0 = $.parseJSON(tempStr);
+				console.log('tempStr:' + tempStr);
+				window.myStorage.setItem(window.storageKeyName.PERSONALINFO, tempModel0);
+			}else{
+				window.myStorage.setItem(window.storageKeyName.PERSONALINFO, {});
+			}
+		}
+		
 		//判断是否输入了值
 		var checkInput = function(text) {
 			if(text.trim().length == 0) {
