协议添加实际uuid等字段

--- a/wisdomCampus/html/login.html
+++ b/wisdomCampus/html/login.html
@@ -98,14 +98,15 @@
 								uuid: tempModel.uuid, //用户设备号
 								shaketype: 'login', //注册(reg),登录(login),修改密码(repw)
 								appid: tempModel.appid, //系统所分配的应用ID
-								schid: storageKeyName.SCHOOLID, //学校ID
-								utp: storageKeyName.USERTYPE //用户类型，0老师,1家长,2学生
+								schid: '1', //学校ID
+								utp: '0' //用户类型，0老师,1家长,2学生
 							};
 							//登录
 							postDataEncry('Login', enData1, comData1, 0, function(data1) {
 								$.hideLoading();
 								if(data1.RspCode == 0) {
 									window.myStorage.setItem(window.storageKeyName.PERSONALINFO, data1.RspData);
+									storageKeyName.TOKEN = data1.RspData.utoken;
 									//将个人信息存入原生app
 									if(utils.getSystem() == 'Android') {
 										
@@ -135,6 +136,8 @@
 			var tempModel0 = $.parseJSON(tempStr);
 			tempModel.uuid = tempModel0.id;
 			tempModel.appid = tempModel0.name;
+			storageKeyName.UUID = tempModel0.id;
+			storageKeyName.APPID = tempModel0.name;
 			console.log('tempStr:' + tempStr);
 			//判断上次是否登录过，自动登录
 			var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
@@ -155,6 +158,7 @@
 					if(data.RspCode == 0) {
 						var tempInfo00 = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 						tempInfo00.token = data.RspData;
+						storageKeyName.TOKEN = data.RspData;
 						window.myStorage.setItem(window.storageKeyName.PERSONALINFO, tempInfo00);
 						utils.hrefSessionStorage('home.html', {});
 					} else {
