--- a/wisdomCampus/html/home.html
+++ b/wisdomCampus/html/home.html
@@ -199,6 +199,7 @@
 				methods: {
 					quitLogin: function() { //退出登录
 						window.myStorage.setItem(window.storageKeyName.PERSONALINFO, '');
+						console.log("退出时保存的个人信息："+myStorage.getItem(storageKeyName.PERSONALINFO))
 						this.isMineShow = false;
 						history.go(-1);
 					},
