--- a/wisdomCampus/html/new-check.html
+++ b/wisdomCampus/html/new-check.html
@@ -49,7 +49,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">新消息</h1>
+			<h1 class="mui-title">新建审批</h1>
 			<a class="mui-icon mui-pull-right right-cancel">取消</a>
 		</header>
 		<div class="mui-content">
@@ -96,16 +96,19 @@
 			<div class="weui-cells">
 				<div class="weui-cell weui-cell_access">
 					<div class="weui-cell__bd">
-						接收人
+						审批流程
 					</div>
 					<div class="weui-cell__ft">
-						点击选择接收人
+						点击选择审批流程
 					</div>
 				</div>
-				<div class="weui-cell weui-cell_switch">
-					<div class="weui-cell__bd">是否短信同步</div>
-					<div class="weui-cell__ft">
-						<input class="weui-switch" type="checkbox" />
+				<div class="weui-cell" style="align-items: flex-start;">
+					<div class="weui-cell__hd" style="margin-right: 18px;">顺序审批人</div>
+					<div class="weui-cell__bd">
+						<ol>
+							<li style="margin-top: 10px;"><span style="border: solid 1px darkgray;padding: 7px 5px 5px;">徐浩然</span></li>
+							<li style="margin-top: 10px;"><span style="border: solid 1px darkgray;padding: 7px 5px 5px;">徐浩然</span><span style="border: solid 1px #3C9BFE;color: #3C9BFE;margin-left: 10px; padding: 7px 5px 5px;">选择审批人</span></li>
+						</ol>
 					</div>
 				</div>
 			</div>
