--- a/wisdomCampus/html/login.html
+++ b/wisdomCampus/html/login.html
@@ -111,7 +111,7 @@
 									if(utils.getSystem() == 'Android') {
 										
 									}else{
-										window.webkit.messageHandlers.setInfo.postMessage(data1.RspData);
+//										window.webkit.messageHandlers.setInfo.postMessage(data1.RspData);
 									}
 									utils.hrefSessionStorage('home.html', {});
 								} else {
