--- a/wisdomCampus/html/check-detail.html
+++ b/wisdomCampus/html/check-detail.html
@@ -221,6 +221,15 @@
 		<script src="../js/utils/utils.js"></script>
 		<script src="../js/utils/storageutil.js"></script>
 		<script src='../js/lib/vconsole/vconsole.min.js'></script>
+		<!--加密-->
+	<script src="../js/lib/RSA/Barrett.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../js/lib/RSA/BigInt.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../js/lib/RSA/RSA.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../js/utils/RSAEncrypt.js" type="text/javascript" charset="utf-8"></script>
+	<!---->
+	<script src='../js/lib/crypto-js/require.js'></script>
+	<script src='../js/utils/signHmacSHA1.js'></script>
+	<script src='../js/utils/sortSign.js'></script>
 		<script type="text/javascript">
 			var checkDetailData = new Vue({
 				el: "#checkDetailData",
