--- a/wisdomCampus/html/home.html
+++ b/wisdomCampus/html/home.html
@@ -158,6 +158,7 @@
 	<script src='../js/lib/crypto-js/require.js'></script>
 	<script src='../js/utils/signHmacSHA1.js'></script>
 	<script src='../js/utils/sortSign.js'></script>
+	<script src='../js/utils/store.js'></script>
 		<script>
 			mui('.mui-scroll-wrapper').scroll({
 				indicators: true, //是否显示滚动条
@@ -182,7 +183,7 @@
 					mui.toast("此功能暂未开放");
 				}
 			});
-			var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
+			var tempInfo = store.get(window.storageKeyName.PERSONALINFO);
 			var tempName = '暂无姓名';
 			if(tempInfo) {
 				tempName = tempInfo.utname;
@@ -205,14 +206,13 @@
 				},
 				methods: {
 					quitLogin: function() { //退出登录
-						window.myStorage.setItem(window.storageKeyName.PERSONALINFO, '');
+						store.remove(window.storageKeyName.PERSONALINFO);
 						//将个人信息存入原生app
 						if(utils.getSystem() == 'Android') {
 
 						} else {
-							window.webkit.messageHandlers.setInfo.postMessage('');
+//							window.webkit.messageHandlers.setInfo.postMessage('');
 						}
-						console.log("退出时保存的个人信息：" + myStorage.getItem(storageKeyName.PERSONALINFO))
 						this.isMineShow = false;
 						history.go(-1);
 					},
