--- a/wisdomCampus/html/login.html
+++ b/wisdomCampus/html/login.html
@@ -29,7 +29,7 @@
 
 			<div class="mui-input-row ">
 				<label><image src="../img/login/password.png" style="width: 30px;height: 30px;" /></label>
-				<input id='password' type="password" class="mui-input-clear mui-input " placeholder="请输入6位密码">
+				<input id='password' type="password" class="mui-input-clear mui-input " placeholder="请输入密码">
 			</div>
 			<hr style=" height:1px;border:none;border-top:1px solid dodgerblue;margin: -12px 20px 0px 60px ;" />
 
